--- a/index.html
+++ b/index.html
@@ -7,43 +7,55 @@
     <title>Mahmoud Makhlouf</title>
     <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.no-icons.min.css" rel="stylesheet">
     <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
-   <!-- <link rel="stylesheet" href="style.css"> -->
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-    <nav class="header">
-        <h1>Mahmoud Makhlouf</h1>
-        <a href="#">
-            <img src="Union.png">
-        </a>
-    </nav>
+    <div class="wraper">
 
-    <div class="headline">
-        <h1>Hey There. I’m Mahmoud</h1>
-        <h3>I’am a Software Developer</h3>
-        <p>I can help you build a product ,
-             feature or website Look through some of my work and experience!
-              If you like what you see and have a project you need coded,
-               don’t hestiate to contact me.
-        </p>
-        <div class="icon-bar">
+        <nav class="header">
+            <h1>Mahmoud Makhlouf</h1>
             <a href="#">
-                <!--<i class="icon-github"></i>-->
-                <img src="github.png">
+                <img src="Union.png">
             </a>
-            <a href="#">
-                <i class="icon-linkedin"></i>
-            </a>
-            <a href="#">
-                <i class="icon-hand-up"></i>
-            </a>
-            <a href="#">
-                <i class="icon-twitter"></i>
-            </a>
-            <a href="#">
-                <img src="m.png">
-            </a>
+        </nav>
+
+        <div class="container">
+
+            <div class="headline">
+                <h1>Hey There. I’m Mahmoud</h1>
+                <h3>I’am a Software Developer</h3>
+                <p>I can help you build a product ,
+                    feature or website Look through some of my work and experience!
+                    If you like what you see and have a project you need coded,
+                    don’t hestiate to contact me.
+                </p>
+                <div class="icon-bar">
+                    <a href="#">
+                        <!--<i class="icon-github"></i>-->
+                        <img src="github.png">
+                    </a>
+                    <a href="#">
+                        <i class="icon-linkedin"></i>
+                    </a>
+                    <a href="#">
+                        <i class="icon-hand-up"></i>
+                    </a>
+                    <a href="#">
+                        <i class="icon-twitter"></i>
+                    </a>
+                    <a href="#">
+                        <img src="m.png">
+                    </a>
+                </div>
+            </div>
+
+            <div class="illustration-header">
+                
+            </div>
+
         </div>
+
     </div>
 </body>
 </html>
