--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <nav class="header">
             <h1>Mahmoud Makhlouf</h1>
             <a href="#">
-                <img src="Union.png">
+                <img src="Union.png" alt="collapsed-menu">
             </a>
         </nav>
 
@@ -33,7 +33,7 @@
                 <div class="icon-bar">
                     <a href="#">
                         <!--<i class="icon-github"></i>-->
-                        <img src="github.png">
+                        <img src="github.png" alt="github-icon">
                     </a>
                     <a href="#">
                         <i class="icon-linkedin"></i>
@@ -45,13 +45,13 @@
                         <i class="icon-twitter"></i>
                     </a>
                     <a href="#">
-                        <img src="m.png">
+                        <img src="m.png" alt="m-letter">
                     </a>
                 </div>
             </div>
 
             <div class="illustration-header">
-                
+
             </div>
 
         </div>
