--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mahmoud Makhlouf</title>
-    <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.no-icons.min.css" rel="stylesheet">
-    <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -35,13 +33,13 @@
                         <img src="github.png" alt="github-icon">
                     </a>
                     <a href="#">
-                        <i class="icon-linkedin"></i>
+                        <img src="in.png" alt="linkedin-icon">
                     </a>
                     <a href="#">
-                        <i class="icon-hand-up"></i>
+                        <img src="Vector.png" alt="victory-sign">
                     </a>
                     <a href="#">
-                        <i class="icon-twitter"></i>
+                        <img src="twitter.png" alt="twitter-icon">
                     </a>
                     <a href="#">
                         <img src="m.png" alt="m-letter">
