--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mahmoud Makhlouf</title>
+    <link href='https://fonts.googleapis.com/css?family=Crete Round' rel='stylesheet'>
+    <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -14,7 +16,7 @@
         <header>
             <nav class="header">
                 <a href="#">
-                    <h1>Mahmoud Makhlouf</h1>
+                    Mahmoud Makhlouf
                 </a>
     
                 <a href="#">
@@ -27,7 +29,7 @@
 
             <div class="headline">
                 <h1>Hey There. I’m Mahmoud</h1>
-                <h3>I’am a Software Developer</h3>
+                <p class="job-title">I’am a Software Developer</p>
                 <p>I can help you build a product ,
                     feature or website Look through some of my work and experience!
                     If you like what you see and have a project you need coded,
@@ -65,13 +67,10 @@
                     
                 </div>
             </div>
-
             <div class="illustration-header">
 
             </div>
-
         </section>
-
     </div>
 </body>
 </html>
