add about myself section

--- a/index.html
+++ b/index.html
@@ -203,8 +203,43 @@
         
     </section>
 
-    <section class="about">
+    <section class="about-myself">
+        <div class="about">
+            <h2 class="about-title">About me</h2>
+            <p class="about-content">Hello I’m a software developer! I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.
+            </p>
+            <button class="get-resume">Get My Resume</button>
+        </div>
 
+        <div class="devider"></div>
+
+        <div class="skills">
+            <ul class="lang-list">
+                <li><ul class="language list-item1"><li>Language</li></ul></li>
+                <li class="lang-item">Javascript</li>
+                <li class="lang-item">Ruby</li>
+                <li class="lang-item">Html</li>
+                <li class="lang-item">Css</li>
+            </ul>
+
+            <ul class="framwork-list">
+                <li><ul class="framworks list-item1"><li>Frameworks</li></ul></li>
+                <li class="lang-item">Bootstrap</li>
+                <li class="lang-item">Ruby on Rails</li>
+                <li class="lang-item">RSPec</li>
+                <li class="lang-item">CapyBara</li>
+                <li class="lang-item">Selenium</li>
+            </ul>
+
+            <ul class="skills-list">
+                <li><ul class="skills-item list-item1"><li>Skills</li></ul></li>
+                <li class="lang-item">Codekit</li>
+                <li class="lang-item">Github</li>
+                <li class="lang-item">Codepen</li>
+                <li class="lang-item">Gitlab</li>
+                <li class="lang-item">Terminal</li>
+            </ul>
+        </div>
     </section>
 </body>
 
