Added form and footer structure to index.html
Added the form elements and the footer with socials icons in the index.html file.

Also modified README.md for contributions.

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
     <section class="about-myself">
         <div class="about">
             <h2 class="about-title">About me</h2>
-            <p class="about-content">Hello I’m a software developer! I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.
+            <p class="about-content">Hello I'm a software developer! I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don't hestiate to contact me.
             </p>
             <button class="get-resume">Get My Resume</button>
         </div>
@@ -241,6 +241,55 @@
             </ul>
         </div>
     </section>
+    <section class="form-container">
+        <h3>
+            I'm always interested in hearing about new projects, 
+            so if you'd like to chat please get in touch.
+        </h3>
+        <form action="post" class="form">
+            <ul>
+                <li>
+                    <input class="name-input" type="text" placeholder="John Doe" name="full-name">
+                </li>
+                <li>
+                    <input class="email-input" type="email" placeholder="johndoe@gmail.com" name="email">
+                </li>
+                <li>
+                    <textarea class="comments-input" placeholder="Leave me any comments here!" name="comments"></textarea>
+                </li>
+            </ul>
+            <input class="submit-button" type="submit" value="Get in Touch">     
+        </form>
+    </section>
+    <footer>
+        <ul>
+            <li>
+                <a href="">
+                    <img src="github.png" alt="">
+                </a>
+            </li>
+            <li>
+                <a href="">
+                    <img src="in.png" alt="">
+                </a>
+            </li>
+            <li>
+                <a href="">
+                    <img src="Vector.png" alt="">
+                </a>
+            </li>
+            <li>
+                <a href="">
+                    <img src="twitter.png" alt="">
+                </a>
+            </li>
+            <li>
+                <a href="">
+                    <img src="m.png" alt="">
+                </a>
+            </li>
+        </ul>
+    </footer>
 </body>
 
 </html>
