--- a/index.html
+++ b/index.html
@@ -246,16 +246,16 @@
             I'm always interested in hearing about new projects, 
             so if you'd like to chat please get in touch.
         </h3>
-        <form action="post" class="form">
+        <form action="#" method="post"  class="form">
             <ul>
                 <li>
-                    <input class="name-input" type="text" placeholder="John Doe" name="full-name">
+                    <input class="name-input" type="text" placeholder="John Doe" name="full-name" maxlength="30" required>
                 </li>
                 <li>
-                    <input class="email-input" type="email" placeholder="johndoe@gmail.com" name="email">
+                    <input class="email-input" type="email" placeholder="johndoe@gmail.com" name="email" required>
                 </li>
                 <li>
-                    <textarea class="comments-input" placeholder="Leave me any comments here!" name="comments"></textarea>
+                    <textarea class="comments-input" placeholder="Leave me any comments here!" name="comments" maxlength="500" required></textarea>
                 </li>
             </ul>
             <input class="submit-button" type="submit" value="Get in Touch">     
