--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </a>
 
         <a href="#">
-            <img src="Union.png" alt="collapsed-menu">
+            <img src="img/Union.png" alt="collapsed-menu">
         </a>
 
     </header>
@@ -38,27 +38,27 @@
         <ul class="icon-bar">
             <li>
                 <a href="#">
-                    <img src="github.png" alt="github-icon">
+                    <img src="img/github.png" alt="github-icon">
                 </a>
             </li>
             <li>
                 <a href="#">
-                    <img src="in.png" alt="linkedin-icon">
+                    <img src="img/in.png" alt="linkedin-icon">
                 </a>
             </li>
             <li>
                 <a href="#">
-                    <img src="Vector.png" alt="victory-sign">
+                    <img src="img/Vector.png" alt="victory-sign">
                 </a>
             </li>
             <li>
                 <a href="#">
-                    <img src="twitter.png" alt="twitter-icon">
+                    <img src="img/twitter.png" alt="twitter-icon">
                 </a>
             </li>
             <li>
                 <a href="#">
-                    <img src="m.png" alt="m-letter">
+                    <img src="img/m.png" alt="m-letter">
                 </a>
             </li>
 
@@ -75,7 +75,7 @@
             </div>
             
             <div class="first-card">
-                <img class="first-project" src="top-proj.png" alt="project-screenshot">
+                <img class="first-project" src="img/top-proj.png" alt="project-screenshot">
 
                 <div class="first-card-content">
                     <h2 class="multi-post">Multi-Post Stories</h2>
@@ -268,27 +268,27 @@
         <ul class="nav-icons">
             <li class="nav-git">
                 <a href="">
-                    <img src="nav-img/github.png" alt="">
+                    <img src="img/nav-img/github.png" alt="">
                 </a>
             </li>
             <li class="nav-in">
                 <a href="">
-                    <img src="nav-img/in.png" alt="">
+                    <img src="img/nav-img/in.png" alt="">
                 </a>
             </li>
             <li class="nav-vector">
                 <a href="">
-                    <img src="nav-img/Vector.png" alt="">
+                    <img src="img/nav-img/Vector.png" alt="">
                 </a>
             </li>
             <li class="nav-twitter">
                 <a href="">
-                    <img src="nav-img/twitter.png" alt="">
+                    <img src="img/nav-img/twitter.png" alt="">
                 </a>
             </li>
             <li class="nav-m">
                 <a href="">
-                    <img src="nav-img/m.png" alt="">
+                    <img src="img/nav-img/m.png" alt="">
                 </a>
             </li>
         </ul>
