--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
             <button class="get-resume">Get My Resume</button>
         </div>
 
-        <div class="devider"></div>
+        <hr class="devider">
         
         <div class="skills">
             <ul class="lang-list">
@@ -255,16 +255,16 @@
                 I'm always interested in hearing about new projects, 
                 so if you'd like to chat please get in touch.
             </h3>
-            <form action="https://formspree.io/f/xayvbrnw" method="post" class="form">
-                <div class="name-input">
+            <form class="form" action="https://formspree.io/f/xayvbrnw" method="post">
+                <div class="name-input desktop-input">
                     <input class="input" type="text" placeholder="Full name" name="full-name" maxlength="30" required>
                     <div class="input-devider"></div>
                 </div>
-                <div class="email-input">
+                <div class="email-input desktop-input">
                     <input class="input" type="email" placeholder="Email address" name="email" required>
                     <div class="input-devider"></div>
                 </div>
-                <textarea class="input-area" placeholder="Enter text here" name="comments" maxlength="500" required></textarea>
+                <textarea class="input-area desktop-input" placeholder="Enter text here" name="comments" maxlength="500" required></textarea>
                 <input class="submit-button" type="submit" value="Get in Touch">
             </form>
         </div>
