styling mobile menu

--- a/index.html
+++ b/index.html
@@ -19,12 +19,17 @@
         <a class="logo" href="#">
             Mahmoud Makhlouf
         </a>
+        
         <ul class="navbar-links">
+            <div>
+                <a class="closeicon" href="#"><img src="./img/closeicon.png" alt="closeicon"></a>
+            </div>
             <li><a href="#">Portfolio</a></li>
             <li><a href="#">About</a></li>
             <li><a href="#">Contact</a></li>
-            <li><a href="#"><img src="img/icon-mail.png" alt="mail"></a></li>
+            <li class="mail-icon"><a href="#"><img src="img/icon-mail.png" alt="mail"></a></li>
         </ul>
+
         <a class="toggle-button" href="#">
             <img src="img/Union.png" alt="collapsed-menu">
         </a>
