hardcode the design of popup window

--- a/index.html
+++ b/index.html
@@ -210,6 +210,37 @@
             
     </section>
 
+    <section class="popup-container">
+        <div class="pop-header">
+            <!--h3 content should be added from js-->
+            <h3 class="pop-title">Multi Post Stories</h3>
+            <img class="close-pop" src="img/closeicon.png">
+        </div>
+        <ul class="popup-tech">
+            <!--content should be added from js-->
+            <li><div class="pop-tech-btn">html</div></li>
+            <li><div class="pop-tech-btn">Bootstrap</div></li>
+            <li><div class="pop-tech-btn">Ruby on rails</div></li>
+        </ul>
+        <div class="popup-content">
+            <img src="img/snapshoot-portfolio.png">
+            <div class="desc-see">
+               <p class="desc">
+                Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                 Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+                  when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                   It has survived not only five centuries, but also the leap into electronic typesetting,
+                    remaining essent
+               </p>
+               <div class="see">
+                   <a class="live"><span>See Live</span><img src="img/live-icon.png"></a>
+                   <a class="source"><span>See Source</span><img src="img/github-white.png"></a>
+               </div>
+            </div>
+        </div>
+
+    </section>
+
     <section class="about-myself" id="about">
         <div class="about">
             <h2 class="about-title">About me</h2>
