add popup functionality

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                 <li><div class="pop-tech-btn">Ruby on rails</div></li>
             </ul>
             <div class="popup-content">
-                <img src="img/snapshoot-portfolio.png">
+                <div class="screenshot" id="pop-img" src="img/snapshoot-portfolio.png"></div>
                 <div class="desc-see">
                    <p class="desc">
                     Lorem Ipsum is simply dummy text of the printing and typesetting industry.
