--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             <div class="pop-header">
                 <!--h3 content should be added from js-->
                 <h3 class="pop-title">Multi Post Stories</h3>
-                <img class="close-pop" src="img/closeicon.png">
+                <img class="close-pop" src="img/closeicon.png" alt="">
             </div>
             <ul class="popup-tech">
                 <!--content should be added from js-->
@@ -122,7 +122,7 @@
                 <li><div class="pop-tech-btn">Ruby on rails</div></li>
             </ul>
             <div class="popup-content">
-                <div class="screenshot" id="pop-img" src="img/snapshoot-portfolio.png"></div>
+                <div class="screenshot" id="pop-img"></div>
                 <div class="desc-see">
                    <p class="desc">
                     Lorem Ipsum is simply dummy text of the printing and typesetting industry.
