add hardcoded project

--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@
                         remaining essent
                    </p>
                    <div class="see">
-                       <a class="live"><span>See Live</span><img src="img/live-icon.png" alt="see live"></a>
-                       <a class="source"><span>See Source</span><img src="img/github-white.png" alt="see source"></a>
+                       <a class="live" href="https://devmahmoud-chat-app.herokuapp.com/"><span>See Live</span><img src="img/live-icon.png" alt="see live"></a>
+                       <a class="source" href="https://github.com/devMahmoud/chat-app"><span>See Source</span><img src="img/github-white.png" alt="see source"></a>
                    </div>
                 </div>
             </div>
